[package]
name = "webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.4"
bytes = "1.4.0"
chrono = "0.4.24"
flate2 = "1.0.25"
log = "0.4.17"
log4rs = "1.2.0"
num_cpus = "1.15.0"
serde = "1.0.160"
serde_derive = "1.0.160"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
