[package]
name = "webserver"
version = "0.1.0"
authors = ["Eslzzyl <eslzzyl@163.com>"]
edition = "2021"
description = "A toy webserver based on Rust"
repository = "https://github.com/Eslzzyl/webserver"
license = "MIT"
publish = false     # 这个程序过于简陋，不应被发布到crates.io

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brotli = "3.3.4"
bytes = "1.4.0"
chrono = "0.4.24"
flate2 = "1.0.25"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
num_cpus = "1.15.0"
regex = "1.8.4"
serde = "1.0.160"
serde_derive = "1.0.160"
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7.3"
